# time-locker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: release.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1766345830311-v8zi54ndz.txt  session-1766345830316-wb4jk0tod-auto-save-1766345860328.json
docs/pages/: index.html
docs/plan/: time-locker.md
docs/reference/: simple-locker-script.js  tlock-rs.md  vault-key-example.md
scripts/: build.js  release.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_zip_creation.rs
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  cli.rs  commands.rs  crypto.rs  error.rs  keyfile.rs  lib.rs  main.rs  progress.rs  tlock_format.rs
src/lib/api/: tauri.ts
src/lib/components/: DropZone.svelte  Header.svelte  ItemCard.svelte  LockedItemsList.svelte  TimeSelector.svelte
src/lib/utils/: files.ts  time.ts
