[package]
name = "time-locker"
version = "1.2.0"
description = "Time-lock encryption application for securing files with temporal constraints"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "time_locker_lib"
crate-type = ["lib"]  # Only need lib for desktop

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing (minimal features for size)
clap = { version = "4.4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }

# Error handling
thiserror = "2.0"

# Cryptography and archives
# Use forked version with header encryption fix
sevenz-rust2 = { git = "https://github.com/JustMaier/sevenz-rust2.git", features = ["compress", "aes256"] }
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"

# Timelock encryption (drand-based cryptographic enforcement)
tlock_age = "0.0.5"
drand_core = "0.0.16"
hex = "0.4"

# Date/Time handling (minimal features for size)
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# YAML parsing for key files
serde_yaml = "0.9"

# File system utilities
walkdir = "2.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"      # Maximum size optimization (smaller than "s")
strip = true         # Remove debug symbols
